--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Prueba</string>
-    <string name="action_settings">Settings</string>
-    <string name="boton_iniciar">Iniciar Sesión</string>
-    <string name="usuario">Usuario</string>
-    <string name="contrasenia">Contraseña</string>
+    <string name="app_name">Retrofit</string>
+    <string name="action_settings">Configuracion</string>
+    <string name="Usuario">Usuario:</string>
+    <string name="Password">Password:</string>
+    <string name="Iniciar_sesion">Iniciar Sesion</string>
+    <string name="title_activity_second">Menu</string>
+    <string name="opcion">Selecciona una Categoria</string>
+    <string name="title_activity_mechanics">Mechanics</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_tools">Tools</string>
+
 </resources>
